@@ -461,8 +461,7 @@ static int halfspeed_do(mpg123_handle *fr)
 			debug("repeat!");
 			fr->to_decode = fr->to_ignore = TRUE;
 			--fr->halfphase;
-			fr->bitindex = 0;
-			fr->wordpointer = (unsigned char *) fr->bsbuf;
+			set_pointer(fr, 0, 0);
 			if(fr->lay == 3) memcpy (fr->bsbuf, fr->ssave, fr->ssize);
 			if(fr->error_protection) fr->crc = getbits(fr, 16); /* skip crc */
 			return 1;
@@ -594,8 +593,8 @@ init_resync:
 		debug2("fr->firsthead: %08lx, audio_start: %li", fr->firsthead, (long int)fr->audio_start);
 	}
 
-  fr->bitindex = 0;
-  fr->wordpointer = (unsigned char *) fr->bsbuf;
+	set_pointer(fr, 0, 0);
+
 	/* Question: How bad does the floating point value get with repeated recomputation?
 	   Also, considering that we can play the file or parts of many times. */
 	if(++fr->mean_frames != 0)
@@ -863,6 +862,13 @@ static int decode_header(mpg123_handle *fr,unsigned long newhead, int *freeforma
 				fr->framesize /= freqs[fr->sampling_frequency]<<(fr->lsf);
 				fr->framesize = fr->framesize + fr->padding - 4;
 			}
+			if(fr->framesize < fr->ssize)
+			{
+				if(NOQUIET)
+					error2( "Frame smaller than mandatory side info (%i < %i)!"
+					,	fr->framesize, fr->ssize );
+				return PARSE_BAD;
+			}
 		break;
 #endif 
 		default:
@@ -879,13 +885,38 @@ static int decode_header(mpg123_handle *fr,unsigned long newhead, int *freeforma
 	return PARSE_GOOD;
 }
 
-void set_pointer(mpg123_handle *fr, long backstep)
-{
-	fr->wordpointer = fr->bsbuf + fr->ssize - backstep;
-	if (backstep)
-	memcpy(fr->wordpointer,fr->bsbufold+fr->fsizeold-backstep,backstep);
+/* Prepare for bit reading. Two stages:
+  0. Layers 1 and 2, side info for layer 3
+  1. Second call for possible bit reservoir for layer 3 part 2,3.
+     This overwrites side info needed for stage 0.
 
-	fr->bitindex = 0; 
+  Continuing to read bits after layer 3 side info shall fail unless
+  set_pointer() is called to refresh things. 
+*/
+void set_pointer(mpg123_handle *fr, int part2, long backstep)
+{
+	fr->bitindex = 0;
+	if(fr->lay == 3)
+	{
+		if(part2)
+		{
+			fr->wordpointer = fr->bsbuf + fr->ssize - backstep;
+			if(backstep)
+				memcpy( fr->wordpointer, fr->bsbufold+fr->fsizeold-backstep
+				,	backstep );
+			fr->bits_avail = (long)(fr->framesize - fr->ssize + backstep)*8;
+		}
+		else
+		{
+			fr->wordpointer = fr->bsbuf;
+			fr->bits_avail  = fr->ssize*8;
+		}
+	}
+	else
+	{
+		fr->wordpointer = fr->bsbuf;
+		fr->bits_avail  = fr->framesize*8;
+	}
 }
 
 /********************************/
